--- a/index.html
+++ b/index.html
@@ -32,23 +32,27 @@
     </div>
     <div class="app">
       <!-- HomePage Section -->
-      <div id="unilan-homepage" class="unilan-base unilan-homepage-intro" style="display: none;">
-          <div class="container-fluid h-100" style="background-color: rgb(0, 0, 0, 0.50);">
-              <div class="row align-items-center h-100">
-                  <div class="col-12 mx-auto">
-                    <div class="unilan-homepage-header-text float-right text-center">
-                      <h1 class="display-1">Pret a en decoudre ?</h1>
-                      <button class="btn custom-full-btn">S'inscrire à une lan</button>
-                      <button class="btn custom-full-btn" onclick="openPage(event, 'unilan-submit')">Choisir vos jeux</button>
+      <div id="unilan-homepage" class="unilan-base">
+        <div class="unilan-homepage-intro">
+            <div class="container-fluid h-100" style="background-color: rgba(0, 0, 0, 0.50);">
+                <div class="row align-items-center h-100">
+                    <div class="col-12 mx-auto">
+                      <div class="unilan-homepage-header-text float-right text-center">
+                        <h1 class="display-1">Pret a en decoudre ?</h1>
+                        <button class="btn custom-full-btn">S'inscrire à une lan</button>
+                        <button class="btn custom-full-btn" onclick="openPage(event, 'unilan-sondage')">Choisir vos jeux</button>
+                      </div>
                     </div>
-                  </div>
-              </div>
-          </div>
+                </div>
+            </div>
+        </div>
       </div>
       <!-- Register Section -->
       <div class="unilan-base" id="unilan-register">
-        <div class="container">
-
+        <div class="container-fluid p-0">
+          <div class="row">
+            <div class="col-md-6"></div>
+          </div>
         </div>
       </div>
       <!-- LeaderBoard Section -->
@@ -58,9 +62,53 @@
         </div>
       </div> 
       <!-- Submit Section-->
-      <div class="unilan-base" id="unilan-submit">
-        <div class="container-fluid p-0">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd8YgYGl4FhuX-dhJzOyQfP9QvJDBUv6DWb_H9dIXk3DkgGNA/viewform?embedded=true" width="100%" height="900px" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe>
+      <div class="unilan-base" id="unilan-sondage">
+        <div class="unilan-sondage">
+          <div class="container">
+              <h1 class="display-3 unilan-sondage-title text-center p-">Votez pour vos jeux favoris</h1>
+              <form class="custom-form-big">
+                <div class="form-row">
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="First name">
+                  </div>
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="Last name">
+                  </div>
+                </div>
+                <div class="form-row unilan-sondage-checkboxes">
+                  <div class="col">
+                    <!-- CheckBoxes -->
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" class="custom-control-input" id="customCheck1">
+                      <label class="custom-control-label" for="customCheck1">Boots</label>
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="customCheck1">
+                        <label class="custom-control-label" for="customCheck1">Boots</label>
+                      </div>
+                      <div class="custom-control custom-checkbox">
+                          <input type="checkbox" class="custom-control-input" id="customCheck1">
+                          <label class="custom-control-label" for="customCheck1">Boots</label>
+                        </div>
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="customCheck1">
+                            <label class="custom-control-label" for="customCheck1">Boots</label>
+                          </div>
+                          <div class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" id="customCheck1">
+                              <label class="custom-control-label" for="customCheck1">Boots</label>
+                            </div>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                <label class="custom-control-label" for="customCheck1">Boots</label>
+                              </div>
+                  </div>
+                </div>
+                <div class="form-row">
+                  <button class="btn custom-full-btn">Voter</button>
+                </div>
+              </form>
+          </div>
         </div>
       </div>
     </div>
