--- a/index.html
+++ b/index.html
@@ -88,20 +88,20 @@
                     </div>
                   </div>
                   <div class="form-row">    
-                    <div class="col-2 pt-5">
+                    <div class="col-2 pt-4">
                       <div class="custom-control custom-checkbox">
                         <input type="checkbox" class="custom-control-input" id="customCheck1">
                         <label class="custom-control-label" for="customCheck1">Je possède la 4G</label>
                       </div>
                     </div>
-                    <div class="col-6 pt-5">
+                    <div class="col-2 pt-4">
                       <div class="custom-control custom-checkbox">
                         <input type="checkbox" class="custom-control-input" id="customCheck1">
                         <label class="custom-control-label" for="customCheck1">J'ai un VPN</label>
                       </div>
                     </div>
-                    <div class="col-4">
-                      <button class="btn custom-full-btn">Voter</button>
+                    <div class="col-8">
+                      <button class="btn custom-full-btn">S'inscrire</button>
                     </div>
                   </div>
                 </form>
