Change On Index

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
               <h4>Terminée - 22/05/2018</h4>
               <div class="unilan-tournament-player-boxes">
                 <h3>Joueurs :</h3>
-                <span class="player-box-winner"><i class="fas fa-trophy"></i> Dorian G.</span>
-                <span class="player-box"><i class="far fa-user-circle"></i> Jean M.</span>
-                <span class="player-box"><i class="far fa-user-circle"></i> Olivier A.</span>
-                <span class="player-box"><i class="far fa-user-circle"></i> Kevin R.</span>
-                <span class="player-box"><i class="far fa-user-circle"></i> Romain B.</span>
+                <span class="player-box-winner"><i class="fas fa-trophy"></i> <i>Craaftx</i> - Dorian G.</span>
+                <span class="player-box"><i class="far fa-user-circle"></i> <i>MasterKafei</i> - Jean M.</span>
+                <span class="player-box"><i class="far fa-user-circle"></i> <i>Nunutte</i> - Olivier A.</span>
+                <span class="player-box"><i class="far fa-user-circle"></i> <i>Villo</i> - Kevin R.</span>
+                <span class="player-box"><i class="far fa-user-circle"></i> <i>Hundil</i> - Romain B.</span>
               </div>
               <div class="unilan-tournament-game-boxes">
                 <h3>Jeux du tournoi :</h3>
