--- a/index.html
+++ b/index.html
@@ -54,15 +54,13 @@
           <div class="row">
             <!-- unilan-tournament-item -->
             <div class="col-md-12 unilan-tournament-item">
-              <h1>LAN #1</h1>
-              <h4>Terminée - 22/05/2018</h4>
+              <h1>LAN #2</h1>
+              <h4>Bientôt - 28/05/2018</h4>
               <div class="unilan-tournament-player-boxes">
                 <h3>Joueurs :</h3>
-                <span class="player-box-winner"><i class="fas fa-trophy"></i> <i>Craaftx</i> - Dorian G.</span>
+                <span class="player-box"><i class="fas fa-trophy"></i> <i>Craaftx</i> - Dorian G.</span>
                 <span class="player-box"><i class="far fa-user-circle"></i> <i>MasterKafei</i> - Jean M.</span>
                 <span class="player-box"><i class="far fa-user-circle"></i> <i>Nunutte</i> - Olivier A.</span>
-                <span class="player-box"><i class="far fa-user-circle"></i> <i>Villo</i> - Kevin R.</span>
-                <span class="player-box"><i class="far fa-user-circle"></i> <i>Hundil</i> - Romain B.</span>
               </div>
               <div class="unilan-tournament-game-boxes">
                 <h3>Jeux du tournoi :</h3>
@@ -105,6 +103,29 @@
                     </div>
                   </div>
                 </form>
+              </div>
+            </div>
+
+            <!-- unilan-tournament-item -->
+            <div class="col-md-12 unilan-tournament-item">
+              <h1>LAN #1</h1>
+              <h4>Terminée - 12/05/2018</h4>
+              <div class="unilan-tournament-player-boxes">
+                <h3>Joueurs :</h3>
+                <span class="player-box"><i class="fas fa-user-circle"></i> <i>Craaftx</i> - Dorian G.</span>
+                <span class="player-box-winner"><i class="fas fa-trophy"></i> <i>MasterKafei</i> - Jean M.</span>
+                <span class="player-box"><i class="far fa-user-circle"></i> <i>Nunutte</i> - Olivier A.</span>
+                <span class="player-box"><i class="far fa-user-circle"></i> <i>Villo</i> - Kevin R.</span>
+                <span class="player-box"><i class="far fa-user-circle"></i> <i>Hundil</i> - Romain B.</span>
+              </div>
+              <div class="unilan-tournament-game-boxes">
+                <h3>Jeux du tournoi :</h3>
+                <span class="game-box"><i class="fas fa-gamepad"></i> Overwatch</span>
+                <span class="game-box"><i class="fas fa-gamepad"></i> Borderland 2</span>
+                <span class="game-box"><i class="fas fa-gamepad"></i> Minecraft</span>
+                <span class="game-box"><i class="fas fa-gamepad"></i> Starcraft</span>
+                <br><br>
+                <span class="m-2">PS : D'autres jeux seront disponibles sur place mais ne seront pas joués dans le tournoi</span>
               </div>
             </div>
           </div>
