--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <h4>Bientôt - 28/05/2018</h4>
               <div class="unilan-tournament-player-boxes">
                 <h3>Joueurs :</h3>
-                <span class="player-box"><i class="fas fa-trophy"></i> <i>Craaftx</i> - Dorian G.</span>
+                <span class="player-box"><i class="fas fa-user-circle"></i> <i>Craaftx</i> - Dorian G.</span>
                 <span class="player-box"><i class="far fa-user-circle"></i> <i>MasterKafei</i> - Jean M.</span>
                 <span class="player-box"><i class="far fa-user-circle"></i> <i>Nunutte</i> - Olivier A.</span>
               </div>
