--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       <div class="unilan-base" id="unilan-tournament">
         <div class="container p-0">
           <div class="row">
+            
+            <h1 class="text-center unilan-tournament-separator">Nouvelles éditions</h1>
+
             <!-- unilan-tournament-item -->
             <div class="col-md-12 unilan-tournament-item">
               <h1>LAN #2</h1>
@@ -105,6 +108,8 @@
                 </form>
               </div>
             </div>
+
+            <h1 class="text-center unilan-tournament-separator">Ancienne éditions</h1>
 
             <!-- unilan-tournament-item -->
             <div class="col-md-12 unilan-tournament-item">
