--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="col-12 mx-auto">
                       <div class="unilan-homepage-header-text float-right text-center">
                         <h1 class="display-1">Pret a en decoudre ?</h1>
-                        <button class="btn custom-full-btn">S'inscrire à une lan</button>
+                        <button class="btn custom-full-btn" onclick="openPage(event, 'unilan-tournament')">S'inscrire à une lan</button>
                         <button class="btn custom-full-btn" onclick="openPage(event, 'unilan-sondage')">Choisir vos jeux</button>
                       </div>
                     </div>
