--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
                     </div>
                 </div>
             </div>
+            <span class="unilan-homepage-author">Développé avec <i class="fas fa-heart" style="color: #a52a2a;"></i> par
+               <a href="https://github.com/MasterKafei" target="_blank">MasterKafei</a> [BackEnd] et 
+               <a href="https://github.com/Craaftx" target="_blank">Craaftx</a> [FrontEnd]
+              </span>
         </div>
       </div>
-      <!-- Tournamen Section -->
+      <!-- Tournament Section -->
       <div class="unilan-base" id="unilan-tournament">
         <div class="container p-0">
           <div class="row">
