Add inline items

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
                 <span class="game-box"><i class="fas fa-gamepad"></i> Fortnite</span>
                 <span class="game-box"><i class="fas fa-gamepad"></i> Minecraft</span>
                 <span class="game-box"><i class="fas fa-gamepad"></i> Gang Beast</span>
+                <span class="game-box"><i class="fas fa-gamepad"></i> Trackmania</span>
+                <span class="game-box"><i class="fas fa-gamepad"></i> Oculus Rift Games</span>
+                <span class="game-box"><i class="fas fa-gamepad"></i> Pubg</span>
+                <span class="game-box"><i class="fas fa-gamepad"></i> World Of Warcraft</span>
+                <span class="game-box"><i class="fas fa-gamepad"></i> League of Legends</span>
                 <br><br>
                 <span class="m-2">PS : D'autres jeux seront disponibles sur place mais ne seront pas joués dans le tournoi</span>
               </div>
