Add gold, silver and bronze rank

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
               <h4>Terminée - 12/05/2018</h4>
               <div class="unilan-tournament-player-boxes">
                 <h3>Joueurs :</h3>
-                <span class="player-box"><i class="fas fa-user-circle"></i> <i>Craaftx</i> - Dorian G.</span>
-                <span class="player-box-winner"><i class="fas fa-trophy"></i> <i>MasterKafei</i> - Jean M.</span>
-                <span class="player-box"><i class="far fa-user-circle"></i> <i>Nunutte</i> - Olivier A.</span>
+                <span class="player-box-winner"><i class="fas fa-trophy" style="color: #daa520;"></i> <i>Craaftx</i> - Dorian G.</span>
+                <span class="player-box"><i class="fas fa-trophy" style="color: #c0c0c0"></i> <i>MasterKafei</i> - Jean M.</span>
+                <span class="player-box"><i class="fas fa-trophy" style="color: #cd7f32"></i> <i>Nunutte</i> - Olivier A.</span>
                 <span class="player-box"><i class="far fa-user-circle"></i> <i>Villo</i> - Kevin R.</span>
                 <span class="player-box"><i class="far fa-user-circle"></i> <i>Hundil</i> - Romain B.</span>
               </div>
